--- a/public/theme/css/template.css
+++ b/public/theme/css/template.css
@@ -1625,6 +1625,20 @@ preloader
   color: #1e1e1e;
 }
 
+.btn-full-green {
+  background-color: #6AB04C!important;
+  color: white!important;
+  border: 2px solid white!important;
+  border-radius: 10px!important;
+}
+
+.btn-full-green:hover {
+  background-color: white!important;
+  color: #6AB04C!important;
+  border: 2px solid #6AB04C!important;
+  border-radius: 10px!important;
+}
+
 .link-green {
   background-color: #6AB04C!important;
   color: white!important;
